fixed homepage alignments

--- a/html5-boilerplate_v7.3.0/css/main.css
+++ b/html5-boilerplate_v7.3.0/css/main.css
@@ -130,7 +130,6 @@ h3, h4 {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 1.2em;
-  margin: 20px;
 }
 
 p {
@@ -143,7 +142,7 @@ img {
 }
 
 figure {
-  margin: 0;
+  margin: auto 0;
 }
 
 address {
@@ -227,7 +226,7 @@ footer .content-wrapper {
 
 footer .social-icons {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -235,10 +234,18 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: #527158;
 }
 
 footer p {
   margin: 0;
+}
+
+footer .social-icons p i {
+  font-size: 1.3em;
 }
 
 footer .copyright {
@@ -336,8 +343,8 @@ input[type=button] {
 }
 
 .features i {
-  font-size: 4.5;
-  padding-bottom: 30px;
+  font-size: 1.8em;
+  padding-bottom: 40px;
 }
 
 .fontawesome-icon {
@@ -374,13 +381,6 @@ input[type=button] {
   background-color: #527158;
 }
 
-.contact {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
-
 .contact-section {
   background-color: #2a423a;
   display: flex;
@@ -395,8 +395,9 @@ input[type=button] {
 
 .map figure {
   position: relative;
-  padding-bottom: 80%;
+  padding-bottom: 125%;
   height: 0;
+  width: 100%;
   overflow: hidden;
 }
 
@@ -429,11 +430,15 @@ input[type=button] {
 }
 
 .faq h2 {
-  margin-bottom: 40px;
+  margin-bottom: 50px;
   line-height: 1;
 }
 
-.faq .content {
+.faq-content h4 {
+  line-height: 1.3;
+}
+
+.faq-content {
 margin-bottom: 50px;
 }
 
@@ -549,7 +554,7 @@ margin-bottom: 50px;
 
   header {
     justify-content: space-around;
-    padding: 30px 0;
+    padding: 34px 0;
   }
 
   header .content-wrapper {
@@ -561,6 +566,9 @@ margin-bottom: 50px;
     width: 30%;
   }
 
+  header nav {
+    width: 20%;
+  }
   header nav ul {
     justify-content: space-between;
   }
@@ -595,7 +603,7 @@ margin-bottom: 50px;
   }
   aside .content-wrapper .form-description,
   aside .content-wrapper .form {
-    width: 35%;
+    width: 40%;
     margin: 0;
   }
 
@@ -621,9 +629,13 @@ margin-bottom: 50px;
     width: 62%;
   }
 
+  .features i {
+    margin-bottom: 30px;
+  }
+
   /* Reviews */
 
-  .reviews-article {
+  .reviews article {
     display: flex;
     justify-content: space-between;
   }
@@ -637,11 +649,20 @@ margin-bottom: 50px;
     width: 49%;
   }
 
+  figure {
+    margin: 0;
+  }
+
   .reviews h3 {
     width: 75%;
     margin: 0;
   }
 /* Footer */
+
+  footer h4 {
+    margin-bottom: 40px;
+  }
+
   footer .conent-wrapper {
     width: 65%;
     margin: 100px 0;
@@ -658,8 +679,17 @@ margin-bottom: 50px;
     line-height: 1.3;
   }
 
+  footer .contact {
+    margin-bottom: 0;
+  }
+
   footer .copyright {
     width: 100%;
+  }
+
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
   }
 
 
@@ -683,7 +713,7 @@ margin-bottom: 50px;
   .contact-section .content-wrapper h2 {
     width: 80%;
 }
-  .contact {
+  .contact-content {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -726,14 +756,17 @@ margin-bottom: 50px;
   .content-wrapper {
     max-width: 960px;
   }
+
   header figure {
     width: 40%;
   }
+
   h2 {
     font-size: 2.2em;
   }
 
-  h3, h4 {
+  h3, 
+  h4 {
     font-size: 1.8em;
   }
 
@@ -757,7 +790,7 @@ margin-bottom: 50px;
 
   aside .content-wrapper .form-description,
   aside .content-wrapper .form {
-    width: 40%;
+    width: 30%;
   }
 
   .form-description p {
@@ -772,6 +805,7 @@ margin-bottom: 50px;
 
   .features article {
     flex-basis: 33%;
+
   }
 
   .fontawesome-icon {
@@ -788,9 +822,23 @@ margin-bottom: 50px;
     width: 42%;
   }
 
+  .reviews article {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  /* Footer */
+
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
+  }
+  
   footer h4 {
     font-size: 1.8em;
+    margin-bottom: 40px;
   }
+
 
   /* =============== 
     / About Page /
